<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:id = "@+id/card"
    android:layout_width = "match_parent"
    android:layout_height = "110dp"
    android:layout_marginLeft = "10dp"
    android:layout_marginTop = "10dp"
    android:layout_marginRight = "10dp"
    app:cardCornerRadius = "8dp">

    <RelativeLayout
        android:id = "@+id/stud_name"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:layout_gravity = "center"
        android:layout_marginStart = "2dp"
        android:padding = "10dp">

        <TextView
            android:id = "@+id/act_sub"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_toEndOf = "@+id/act_date"
            android:maxLength = "100"
            android:text = "@string/school_news"
            android:textColor = "@color/new2"
            android:textSize = "16sp"
            android:textStyle = "bold"
            app:fontFamily = "@font/opensans_semibold" />

        <TextView
            android:id = "@+id/act_details"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_below = "@+id/act_sub"
            android:layout_marginTop = "10dp"
            android:ellipsize = "end"
            android:maxLines = "2"
            android:text = "@string/testing_for_evolvu_news_card"
            android:textColor = "@color/secondary_text"
            android:textSize = "14sp"
            app:fontFamily = "@font/opensans_semibold" />

        <TextView
            android:id = "@+id/act_date"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_alignTop = "@+id/act_sub"
            android:layout_alignBottom = "@+id/act_sub"
            android:layout_alignParentStart = "true"
            android:gravity = "center_vertical"
            android:text = "@string/_09_10_2019"
            android:textColor = "@color/secondary_text"
            android:textSize = "14sp"
            app:fontFamily = "@font/opensans_semibold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
