<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbckgrnd">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/icd_tb_aboutus"
            layout="@layout/header_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="60dp">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/new_evolvu" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv1"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:padding="5dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/evolvu_smart_school_app_for_parents"
                        android:textColor="@color/primary_dark_material_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:text="@string/about_us_details"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:text="@string/evolvu_is_backed_by_a_marvelous_team_of_expert_designers_developers_architects_and_quality"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:text="@string/objective"
                        android:textSize="16sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/send_your_new_feature_request_on"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/contactmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/contact_aceventura_in"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/email"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/emailat"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:paddingStart="5dp"
                            android:paddingLeft="5dp"
                            android:text="@string/aceventuraservices_gmail_com"
                            android:textSize="16sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:text="@string/rate_us"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iv4"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/playstore"
                            android:gravity="center"
                            android:visibility="visible" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/follow_us_on"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iv2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/facebook" />

                        <ImageView
                            android:id="@+id/iv3"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/linkedin" />

                        <ImageView
                            android:id="@+id/iv5"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/search" />


                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:textSize="16sp"
                        android:visibility="gone" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <include
            android:id="@+id/bb_aboutus"
            layout="@layout/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</LinearLayout>
